--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!--Jquery : Toggle-->
-    <!-- <a href="http://jquery.com/">jQuery</a>
+    <a href="http://jquery.com/">jQuery</a>
     <script src="jquery-3.5.1.js"></script>
     <script>
       $(document).ready(function () {
@@ -31,7 +31,7 @@
           }
         });
       });
-    </script> -->
+    </script>
 
     <!-- navbar-->
     <div class="upperarea">
@@ -39,19 +39,22 @@
         <span class="headname">Contact</span>
         <a href="/contactinfo.html"> <input type="button" class="addnew" /></a>
       </nav>
+    </div>
 
-      <!--search bar-->
-      <div class="searcharea">
-        <input type="search" class="searchbox" placeholder="Search.." />
-      </div>
+    <!--search bar-->
+    <div class="searcharea">
+      <input type="search" class="searchbox" placeholder="Search.." />
+    </div>
 
-      <!--Alphabet navigation bar-->
-      <div id="nav" class="CharacterContainer"></div>
+    <!--Alphabet navigation bar-->
+    <div id="nav" class="CharacterContainer"></div>
 
-      <!-- Contact list-->
-      <div class="contactlist">A</div>
-      <div class="personinfo">
-        <!-- <div class="name">
+    <!-- Contact list-->
+    <div class="contactlist">A</div>
+    <div class="personinfo"> </div>
+    <div class="contactlist">B</div>
+      <!--oldcode
+      <div class="name">
           <img src="/icon/1752632-pokemon/png/011-avatar.png" alt="" /> Aliscon
           Cooper
         </div>
