--- a/index.html
+++ b/index.html
@@ -37,131 +37,25 @@
     <div class="upperarea">
       <nav class="navbar">
         <span class="headname">Contact</span>
-        <a href="/contactinfo.html"> <input type="button" class="addnew" /></a>
-      </nav>
-    </div>
 
     <!--search bar-->
     <div class="searcharea">
-      <input type="search" class="searchbox" placeholder="Search.." />
+      <input type="text" id="myInput" onkeyup="loadPage()" class="searchbox" placeholder="Search.." />
     </div>
+    <a href="/contactinfo.html"> <input type="button" class="addnew" /></a>
+      
+      </nav>
+    </div>
+
 
     <!--Alphabet navigation bar-->
     <div id="nav" class="CharacterContainer"></div>
 
     <!-- Contact list-->
-    <div class="contactlist">A</div>
-    <div class="personinfo"> </div>
-    <div class="contactlist">B</div>
-      <!--oldcode
-      <div class="name">
-          <img src="/icon/1752632-pokemon/png/011-avatar.png" alt="" /> Aliscon
-          Cooper
-        </div>
+    <div class="contactlist"></div>
+    <div class="personinfo"></div>
 
-        <div class="detailinfo">
-          <ul>
-            Mobile: 07432614929
-          </ul>
-          <ul>
-            Email: alison11@gmail.com
-          </ul>
-          <ul>
-            Address: 1 Albert Embankment
-          </ul>
-          <div class="actionbuttons">
-            <button class="icon">
-              <i class="fab fa-facebook-messenger"></i>
-            </button>
-            <button class="icon">
-              <i class="fas fa-phone-alt"></i>
-            </button>
-            <button class="icon">
-              <i class="fas fa-envelope"></i>
-            </button>
-            <button class="text-edit">
-              EDIT
-            </button>
-            <button class="text-delete">
-              DELETE
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <div class="contactlist">B</div>
-      <div class="personinfo">
-        <div class="name">
-          <img src="/icon/1752632-pokemon/png/002-avatar.png" alt="" /> Briana
-          Jones
-        </div>
-
-        <div class="detailinfo">
-          <ul>
-            Mobile: 55912379512
-          </ul>
-          <ul>
-            Email: briana@gmail.com
-          </ul>
-          <ul>
-            Address: 53 Bethnal Green Rd, London E2 7DG
-          </ul>
-          <div class="actionbuttons">
-            <button class="icon">
-              <i class="fab fa-facebook-messenger"></i>
-            </button>
-            <button class="icon">
-              <i class="fas fa-phone-alt"></i>
-            </button>
-            <button class="icon">
-              <i class="fas fa-envelope"></i>
-            </button>
-            <button class="text-edit">
-              EDIT
-            </button>
-            <button class="text-delete">
-              DELETE
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <div class="contactlist">C</div>
-      <div class="personinfo">
-        <div class="name">
-          <img src="/icon/1752632-pokemon/png/003-avatar.png" alt="" />
-          Christopher Lewin
-        </div>
-
-        <div class="detailinfo">
-          <ul>
-            Mobile: 123465451691
-          </ul>
-          <ul>
-            Email: clwin@gmail
-          </ul>
-          <ul>
-            Address: 1 Albert Embankment
-          </ul>
-          <div class="actionbuttons">
-            <button class="icon">
-              <i class="fab fa-facebook-messenger"></i>
-            </button>
-            <button class="icon">
-              <i class="fas fa-phone-alt"></i>
-            </button>
-            <button class="icon">
-              <i class="fas fa-envelope"></i>
-            </button>
-            <button class="text-edit">
-              EDIT
-            </button>
-            <button class="text-delete">
-              DELETE
-            </button>
-          </div>
-        </div>
-      </div> -->
+    
     </div>
   </body>
 </html>
