--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@
     <!-- Contact list-->
     <div class="contactlist"></div>
     <div class="personinfo"></div>
-
     <!--contact list area fin-->
+
+    <!--delete modal-->
+    <!-- <div class="modal" id="id01">
+      <span
+        onclick="document.getElementById('id01').style.display='none'"
+        class="close"
+        title="Close Modal"
+        >×</span
+      >
+    </div> -->
   </body>
 </html>
