--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="deletealert">
         <div class="deletepopup-close">+</div>
         <h1>Delete Account</h1>
-        <p>Are you sure you want to delete your account?</p>
+        <p>Are you sure you want to delete this contact account?</p>
         <button class="yes">YES</button>
         <button class="discard">DISCARD</button>
       </div>
