--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="deletepopup-close">+</div>
         <h1>Delete Account</h1>
         <p>Are you sure you want to delete this contact account?</p>
-        <button class="yes">YES</button>
+        <button class="yes" onclick="deleteName();">YES</button>
         <button class="discard">DISCARD</button>
       </div>
     </div>
