--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
     <!--Jquery : Toggle-->
 
-    <!-- Contact list-->
+    <!-- Contact list start-->
     <div class="contactlist"></div>
     <div class="personinfo"></div>
-    <!--contact list area fin-->
+    <!--Contact list area fin-->
   </body>
 </html>
