--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
       crossorigin="anonymous"
     ></script>
     <title>Address Book</title>
+
     <link rel="stylesheet" href="style.css" />
     <script src="/main2.js" defer></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@300;500&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- navbar-->
@@ -119,8 +125,6 @@
         <button class="discard">DISCARD</button>
       </div>
     </div>
-
-    <!--Jquery : Toggle-->
 
     <!-- Contact list start-->
     <div class="contactlist"></div>
